--- a/packages/client/assets/scss/styles.scss
+++ b/packages/client/assets/scss/styles.scss
@@ -6,7 +6,7 @@ $family-sans-serif: "Roboto", sans-serif;
 // Set your colors
 $primary: #053255;
 $primary-invert: findColorInvert($primary);
-$gold: #946D38;
+$gold: #bd8f21;
 $gold-invert: findColorInvert($gold);
 $navbar-item-active-color: purple;
 
