Completed Footer Mockup v1
This footer dynamically renders each icon from a list of data returned from the Vue webhook data()
The next addition will be the netlify CMS allowing @mvmdesigner to edit the footer

Co-Authored-By: Michael Mercadante <mvmdesignerart@gmail.com>

--- a/packages/client/assets/scss/styles.scss
+++ b/packages/client/assets/scss/styles.scss
@@ -1,7 +1,8 @@
 // Import Bulma's core
 @import "~bulma/sass/utilities/_all";
 
-$family-sans-serif: "Roboto", sans-serif;
+$family-sans-serif: "Roboto",
+sans-serif;
 
 // Set your colors
 $primary: #053255;
@@ -12,8 +13,7 @@ $navbar-item-active-color: purple;
 $footer-background-color: $primary;
 
 // Setup $colors to use as bulma classes (e.g. 'is-twitter')
-$colors: (
-    "white": ($white, $black),
+$colors: ("white": ($white, $black),
     "black": ($black, $white),
     "light": ($light, $light-invert),
     "gold" : ($gold, $gold-invert),
