--- a/packages/client/assets/scss/styles.scss
+++ b/packages/client/assets/scss/styles.scss
@@ -1,11 +1,10 @@
 // Import Bulma's core
-@import "~bulma/sass/utilities/_all";
+@import '~bulma/sass/utilities/_all';
 // Import Font Awesome Styles to fix production nuxt generation bug
 // SEE https://github.com/FortAwesome/Font-Awesome/issues/18666
 @import '@fortawesome/fontawesome-svg-core/styles.css';
 
-$family-sans-serif: "Roboto",
-sans-serif;
+$family-sans-serif: 'Roboto', sans-serif;
 
 // Set your colors
 $primary: #053255;
@@ -16,16 +15,47 @@ $navbar-item-active-color: purple;
 $footer-background-color: $primary;
 
 // Setup $colors to use as bulma classes (e.g. 'is-twitter')
-$colors: ("white": ($white, $black),
-    "black": ($black, $white),
-    "light": ($light, $light-invert),
-    "gold" : ($gold, $gold-invert),
-    "dark": ($dark, $dark-invert),
-    "primary": ($primary, $primary-invert),
-    "info": ($info, $info-invert),
-    "success": ($success, $success-invert),
-    "warning": ($warning, $warning-invert),
-    "danger": ($danger, $danger-invert),
+$colors: (
+  'white': (
+    $white,
+    $black,
+  ),
+  'black': (
+    $black,
+    $white,
+  ),
+  'light': (
+    $light,
+    $light-invert,
+  ),
+  'gold': (
+    $gold,
+    $gold-invert,
+  ),
+  'dark': (
+    $dark,
+    $dark-invert,
+  ),
+  'primary': (
+    $primary,
+    $primary-invert,
+  ),
+  'info': (
+    $info,
+    $info-invert,
+  ),
+  'success': (
+    $success,
+    $success-invert,
+  ),
+  'warning': (
+    $warning,
+    $warning-invert,
+  ),
+  'danger': (
+    $danger,
+    $danger-invert,
+  ),
 );
 
 // Links
@@ -40,5 +70,5 @@ $navbar-dropdown-background-color: $primary;
 $navbar-background-color: $primary;
 
 // Import Bulma and Buefy styles
-@import "~bulma";
-@import "~buefy/src/scss/buefy";
+@import '~bulma';
+@import '~buefy/src/scss/buefy';
