--- a/src/client/src/layouts/HomeLayout.astro
+++ b/src/client/src/layouts/HomeLayout.astro
@@ -1,5 +1,6 @@
 ---
 import BaseLayout from '@layouts/BaseLayout.astro'
+import Navbar from '@components/Navbar.astro';
 
 export interface Props {
 	title: string;
@@ -16,7 +17,7 @@ const {
 ---
 
 <BaseLayout {title} {contentType} {description} {image}>
-	<!-- <Navbar client:load></Navbar> -->
+	<Navbar />
 	<main class="flex-1 flex flex-col">
 		<slot />
 	</main>
